--------------------------
-Add new Help Tab, display a short help how to use PixelController
-Add Zoom Effect, add Zoom options (zoom in, zoom out, vertical, horizontal)
-Add Textwriter option (PingPong scrolling, left scrolling)
-Add new keyboard shortcut to select tabs
-Fix use colorset name (instead of index) if a preset is saved
-Fix colorscroll GUI element initialization
-Fix PixConCli JMX Query  
-Cleanup GUI, make grouping of controls more strict
-Reduce filesize of distribution file, remove unneeded files
-Update PixConCli, improve message handling 
-Update PixelInvaders firmware, use the TPM2Net protocol to send data 
   Testcase: 2 PixelInvader Panels, ColorScroll Generator, no sound update
   Framerate old fw: 35fps, Framerate new fw: 80fps -> 230% faster!
   

Changelog v1.4.0 to v1.4.1
--------------------------
-Fix update TPM2.net implementation (add total packet bytes)
-Fix cleanup unused files
-Fix OSC listener, increased buffer size to 50kb so large image content can be sent via OSC
-Fix OSC address, expected: "/NAME" was: "NAME"
-Fix shuffle Colorset in Random mode, fix Issue#37
-Feature: disable beat detection if sound volume is too low
-Remove all references to the MD5 class, use Adler as caching mechanism (20x faster)
-Keep aspect ratio if internal buffer size is calculated


Changelog v1.3.1 to v1.4.0
--------------------------
-Add support for E1.31 devices
-Add more 8x8 icon images
-Add new effect, rotate 90 degrees
-Add option to hide internal Visuals to save CPU power
-Add new generator: VisualZero. use the first visual as generator, you can chain you effects.
-Add new random preset mode
-Add Pass through mode: ScreenCaputure (always) and OSC Generator (depending on input) are now 
     24bpp generators, you cannot use effects/mixer/colorsets
-Add option to adjust the color for each PixelInvaders panel
-Add new gamma option, GAMMA 2.2 
-Fix: Checkbox mixer for larger resolutions
-Fix: find .png files in GUI