@@ -6,6 +6,7 @@ Changelog v1.4.1 to v1.5.0
 -Add new keyboard shortcut to select tabs
 -Fix use colorset name (instead of index) if a preset is saved
 -Fix colorscroll GUI element initialization
+-Fix Effect Rotate90 for non square output
 -Fix PixConCli JMX Query  
 -Cleanup GUI, make grouping of controls more strict
 -Reduce filesize of distribution file, remove unneeded files
